JW7-1342 Fix ad skip button and overlay ads on small player

--- a/src/css/imports/jwplayerelement.less
+++ b/src/css/imports/jwplayerelement.less
@@ -116,6 +116,19 @@
 
 .jw-plugin {
     position: absolute;
+    bottom: 2.5em;
+
+    .jw-banner {
+        max-width: 100%;
+        opacity: 0;
+        cursor: pointer;
+        position: absolute;
+        margin: auto;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: block;
+    }
 }
 
 .jw-cast-screen {
