--- a/src/css/flags/user-inactive.less
+++ b/src/css/flags/user-inactive.less
@@ -7,4 +7,8 @@
       .jw-logo.jw-hide {
           display : none;
       }
+
+      .jw-plugin, .jw-captions{
+          bottom: 0.5em;
+      }
 }
