--- a/src/css/imports/captions.less
+++ b/src/css/imports/captions.less
@@ -7,7 +7,7 @@
     margin: 0 auto;
     width: 100%;
     left: 0;
-    bottom: 1.75em;
+    bottom: 3em;
     right: 0;
     max-width: 90%;
     text-align: center;
